@@ -2315,7 +2315,8 @@ cb_most_common (GnmStyle *style,
 /**
  * sheet_style_most_common:
  * @sheet: sheet to inspect
- * @is_col: if %TRUE, look for common styles in columns; if FALSE, look in rows.
+ * @is_col: if %TRUE, look for common styles in columns; if %FALSE, look in
+ * rows.
  *
  * Returns: an array of styles describing the most common styles, one per column
  * or row.
