@@ -1286,6 +1286,10 @@ gnm_sheet_resize_main (Sheet *sheet, int cols, int rows,
 	if (old_cols == cols && old_rows == rows)
 		return;
 
+	if (gnm_debug_flag ("sheet-resize"))
+		g_printerr ("Resize %dx%d -> %dx%d\n",
+			    old_cols, old_rows, cols, rows);
+
 	sheet->workbook->sheet_size_cached = FALSE;
 
 	/* ---------------------------------------- */
@@ -1430,11 +1434,12 @@ gnm_sheet_resize_main (Sheet *sheet, int cols, int rows,
 
 	if (cols > old_cols) {
 		int r = 0;
-		while (r < old_rows) {
+		int end_r = MIN (old_rows, rows);
+		while (r < end_r) {
 			int r2 = r;
 			GnmStyle *mstyle = common_row_styles[r];
 			GnmRange rng;
-			while (r2 + 1 < old_rows &&
+			while (r2 + 1 < end_r &&
 			       mstyle == common_row_styles[r2 + 1])
 				r2++;
 			range_init (&rng, old_cols, r, cols - 1, r2);
@@ -1451,12 +1456,12 @@ gnm_sheet_resize_main (Sheet *sheet, int cols, int rows,
 
 	if (rows > old_rows) {
 		int c = 0;
-
-		while (c < old_cols) {
+		int end_c = MIN (old_cols, cols);
+		while (c < end_c) {
 			int c2 = c;
 			GnmStyle *mstyle = common_col_styles[c];
 			GnmRange rng;
-			while (c2 + 1 < old_cols &&
+			while (c2 + 1 < end_c &&
 			       mstyle == common_col_styles[c2 + 1])
 				c2++;
 			range_init (&rng, c, old_rows, c2, rows - 1);
@@ -1483,6 +1488,7 @@ gnm_sheet_resize_main (Sheet *sheet, int cols, int rows,
 
 		for (c = 0; c < old_cols; c++)
 			gnm_style_unref (common_col_styles[c]);
+
 		g_free (common_col_styles);
 	}
 
